[package]
name = "nu_plugin_roaring"
version = "0.1.4"
edition = "2021"
authors = ["yybit <yybit2@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/yybit/nu_plugin_roaring"
repository = "https://github.com/yybit/nu_plugin_roaring"
description = "A Nushell plugin for Roaring Bitmap"
readme = "README.md"
include = ["**/*.rs", "Cargo.toml"]
keywords = ["nu", "plugin", "roaring", "bitmap"]

[dependencies]
nu-plugin = "0.104.1"
nu-protocol = { version = "0.104.1", features = ["plugin"] }

serde = { version = "1.0.219", features = ["derive"] }
typetag = "0.2.20"
roaring = { version = "0.10.12", features = ["serde"] }